Bug fix: placeholders z-index doesnt overlay images in fullscreen

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -112,7 +112,7 @@ body::-webkit-scrollbar{
 #image-loader {
   width: 100%;
   height: 100%;
-  z-index: 0;
+  z-index: 1;
   position: fixed;
   background-color: black;
   background-repeat: no-repeat;
